--- a/LoL_Match_Prediction.ipynb
+++ b/LoL_Match_Prediction.ipynb
@@ -145,7 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "matches = pd.read_csv('./data.csv', index_col='id')"
+    "matches = pd.read_csv('./dataset/data.csv', index_col='id')"
    ]
   },
   {
@@ -2293,7 +2293,7 @@
     }
    ],
    "source": [
-    "matches = pd.read_csv('./high_diamond_ranked.csv', index_col='gameId')\n",
+    "matches = pd.read_csv('./dataset/high_diamond_ranked.csv', index_col='gameId')\n",
     "matches.head()"
    ]
   },
